# RPI_Home_System

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
config/: family_chat.example.toml
core/: Cargo.toml
core/src/: cli.rs  events.rs  ipc.rs  lib.rs  main.rs  plugin_host.rs
core/src/services/: log.rs  mod.rs  storage.rs  timer.rs
core/tests/: integration.rs
plugin_api/: Cargo.toml
plugin_api/src/: lib.rs
plugins/family_chat/: Cargo.toml  README.md  build.rs  package-lock.json  package.json  plugin.toml
plugins/family_chat/e2e/: e2e_message_appears.spec.js  playwright.config.js
plugins/family_chat/src/: api.rs  auth.rs  config.rs  core_bridge.rs  db.rs  embed.rs  files.rs  housekeeping.rs  lib.rs  main.rs  messages.rs  model.rs  plugin.rs  presence.rs  reads.rs  rooms.rs  typing.rs  ws.rs
plugins/family_chat/tests/: bootstrap.rs  integration.rs  messages.rs  realtime.rs  ui_serving.rs  webui_build.rs
plugins/family_chat/webui/: index.html  package-lock.json  package.json  tsconfig.json
plugins/family_chat/webui/scripts/: run-e2e-agent.mjs
plugins/family_chat/webui/src/: App.tsx  router.tsx
plugins/family_chat/webui/src/components/: Composer.tsx  DMList.tsx  FilePicker.tsx  Header.tsx  Layout.tsx  MessageItem.tsx  MessageList.tsx  Modal.tsx  PresenceAvatar.tsx  RoomList.test.tsx  RoomList.tsx  SearchBar.tsx  Sidebar.tsx  Toast.tsx  TypingDots.tsx  TypingIndicator.tsx
plugins/family_chat/webui/src/lib/: api.ts  auth.ts  markdown.test.ts  markdown.ts  store.ts  types.ts  utils.ts  ws.ts
plugins/family_chat/webui/src/pages/: Bootstrap.tsx  Chat.test.tsx  Chat.tsx  Login.test.tsx  Login.tsx  Search.tsx  Settings.tsx
plugins/family_chat/webui/tests/: e2e_agent_message.spec.tsx  e2e_agent_realtime.spec.tsx  plugin.ts
plugins/sample_plugin/: Cargo.toml  plugin.toml
plugins/sample_plugin/src/: main.rs
