[package]
name = "homecore"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "homecore"
path = "src/main.rs"

[dependencies]
plugin_api = { path = "../plugin_api" }
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
clap = { version = "4", features = ["derive"] }
directories = "5"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
