[package]
name = "family_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
axum = { version = "0.6", features = ["ws", "json", "multipart"] }
tower = "0.4"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = "0.20"
hyper = { version = "0.14", features = ["full"] }
rusqlite = { version = "0.30", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.23"
time = "0.3"
rand = "0.8"
sha2 = "0.10"
base64 = "0.21"
jsonwebtoken = "9"
argon2 = "0.5"
once_cell = "1"
include_dir = "0.7"
mime_guess = "2"
bytes = "1"
uuid = { version = "1", features = ["serde", "v4", "v5"] }
parking_lot = "0.12"
tokio-util = "0.7"
walkdir = "2"
plugin_api = { path = "../../plugin_api" }
rust-embed = "8"
futures = "0.3"
url = "2"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.11", features = ["json", "multipart"] }
